[package]
name = "bhd5-decrypt-rust"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "x86_64")']
rustflags = ["-C", "target-cpu=znver4", "-C", "target-feature=+sse4.1,+sse4.2,+avx,+avx2,+fma,+bmi1,+bmi2,+lzcnt,+popcnt"]

[lib]
name = "bhd5_decrypt_rust"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.6"
rayon = "1.10"

[dependencies.pkcs1]
version = "0.7"
features = ["alloc", "pem"]

